# book-rust-macros

./: Cargo.toml  README.md
src/: lib.rs
src/ch02_p013_creating/: mod.rs
src/ch02_p019_varargs/: mod.rs
src/ch02_p023_newtypes/: mod.rs
src/ch02_p028_dsls/: mod.rs
src/ch02_p031_composing/: mod.rs
src/ch02_p038_ex1/: mod.rs
src/ch02_p038_ex2/: mod.rs
src/ch02_p038_ex3/: mod.rs
src/ch02_p038_ex4/: mod.rs
src/ch02_p038_ex5/: mod.rs
src/ch02_p038_ex6/: mod.rs
src/ch04_p067_more/: mod.rs
src/ch04_p069_parse/: mod.rs
src/ch04_p071_going/: mod.rs
src/ch05_p083_generating/: mod.rs
src/ch05_p090_composing/: mod.rs
src/ch05_p096_ex2/: mod.rs
src/ch06_p101_fleshing/: mod.rs
src/ch06_p103_adding/: mod.rs
src/ch06_p105_blackbox/: mod.rs
src/ch06_p112_testing/: mod.rs
src/ch06_p116_further/: mod.rs
src/ch06_p119_alternative/: mod.rs
src/ch06_p127_ex1/: mod.rs
src/ch07_p140_getting/: mod.rs
tests/: test_ch03_p048_generating.rs  test_ch03_p052_same.rs  test_ch03_p053_venial.rs  test_ch03_p055_ex1.rs  test_ch03_p055_ex3.rs  test_ch03_p055_ex4.rs  test_ch04_p059_attribute.rs  test_ch04_p060_first.rs  test_ch04_p061_getting.rs  test_ch04_p067_more.rs  test_ch04_p069_parse.rs  test_ch04_p071_going.rs  test_ch04_p072_even.rs  test_ch04_p076_ex1.rs  test_ch04_p076_ex5.rs  test_ch05_p081_recreating.rs  test_ch05_p083_generating.rs  test_ch05_p089_composing.rs  test_ch05_p096_ex1.rs  test_ch05_p096_ex2.rs  test_ch06_p101_fleshing.rs  test_ch06_p105_blackbox.rs  test_ch06_p116_further.rs  test_ch06_p119_alternative.rs  test_ch06_p122_unhappy.rs  test_ch07_p137_setup.rs  test_ch07_p140_getting.rs  test_ch07_p145_changing.rs  test_ch07_p149_error.rs  test_ch07_p150_using.rs  test_ch07_p155_abort.rs  test_ch08_p164_rename.rs  test_ch08_p170_naming.rs  test_ch08_p173_sensible.rs  test_ch08_p177_better.rs  test_ch08_p179_build.rs  test_ch08_p201_ex1.rs  test_ch09_p207_parsing.rs  test_ch09_p215_struct.rs  test_ch09_p218_using.rs  (+10 more)
(+18 files in other folders)
