[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Code adapted from the Manning book 'Write Powerful Rust Macros'"
edition = "2024"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "book-rust-macros"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/book-rust-macros"
rust-version = "1.90.0"
version = "0.0.0-SNAPSHOT"

[dependencies]
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[profile.dev]
debug = "line-tables-only"
