[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Code adapted from the Manning book 'Write Powerful Rust Macros'"
edition = "2024"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "book-rust-macros"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/book-rust-macros"
rust-version = "1.90.0"
version = "0.0.0-SNAPSHOT"

[dependencies]
proc-macro2 = "1.0.101"
quote = "1.0.41"
syn = "2.0.106"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
venial = "0.5.0"

[lib]
proc-macro = true

[profile.dev]
debug = "line-tables-only"
