[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Code adapted from the Manning book 'Write Powerful Rust Macros'"
edition = "2024"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "book-rust-macros"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/book-rust-macros"
rust-version = "1.91"
version = "0.0.0-SNAPSHOT"

[dependencies]
# https://osv.dev/vulnerability/RUSTSEC-2024-0370
# proc-macro-error = "1.0.4"
proc-macro2 = "1.0.103"
quote = "1.0.42"
syn = { version = "2.0.111", features = ["extra-traits"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
venial = "0.5.0"

[lib]
proc-macro = true

[profile.dev]
debug = "line-tables-only"
